--- a/MauiApp2/Platforms/Android/AndroidManifest.xml
+++ b/MauiApp2/Platforms/Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<application android:allowBackup="true" android:icon="@roid:supportsRtl="true"></application>
+	<uses-permission android:name="android.permission.ACCESS_Nmipmap/appicon" android:roundIcon="@mipmap/appicon_round" andETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
     <queries>
         <intent>
